# ltc2485

./: .gitignore  ADCTest1.txt  ADCTest1.xlsx  CMakeLists.txt  LTC2485Reader.ino  Makefile  flash-bl  flash-code  ltc2485.cpp  ltc2485.ino
